# textura

./: .gitignore  AGENTS.md  BUSINESS_RULES.md  CONTRIBUTING.md  README.md  TDD.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
roadmap/: corpus_mode.md
tests/: conftest.py
tests/agents/: __init__.py  test_cluster_agent.py  test_corpus_processing_agent.py
tests/cli/: test_cli.py
tests/extraction/: test_extractor_agent.py
tests/ingestion/: test_embedder.py
tests/llm_clients/: __init__.py  test_gemini_client.py
tests/logging/: test_stats_collector.py
tests/mocks/: mock_llm_service.py
textura/: __init__.py  cli.py
textura/agents/: __init__.py  cluster_agent.py  corpus_processing_agent.py  mystery_agent.py  narrative_agent.py  retrieval_agent.py
textura/extraction/: extractor_agent.py  models.py  prompts.py
textura/ingestion/: chunker.py  embedder.py  source_watcher.py  vector_store.py
textura/llm_clients/: README.md  __init__.py  base.py  gemini_client.py  types.py
textura/logging/: metacog.py  stats_collector.py
textura/utils/: id_generator.py
textura/vault/: timeline_builder.py  vault_writer.py
