[project]
name = "textura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Codex", email = "codex@openai.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "ANN", "S", "BLE", "A", "COM", "RUF"]
ignore = ["ANN101", "ANN102", "D203", "D212"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_redefinition = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
# Exclude test files and potentially other non-typed dirs from strict checks
# This allows tests to be less verbose with type hints if desired,
# and also ignores missing stubs for test-specific libraries.
exclude = [
    'tests/.*',
    'textura/scratch/.*', # If you add a scratchpad directory
    'docs/.*', # If you add a docs directory with Sphinx or other tools
    'venv/.*', '.venv/.*', 'env/.*', # Virtual environments
]
